--- a/views/partials/addButton.ejs
+++ b/views/partials/addButton.ejs
@@ -1,3 +1,3 @@
 <div>
-    <button type="button" class="button"><a href="http://localhost:5000/compose">Compose</a></button>
+    <button type="button" class="button"><a href="https://narrative-nest.onrender.com/compose">Compose</a></button>
 </div>
