--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -21,7 +21,7 @@
 
 .button{
     position: relative;
-    top: 3rem;
+    margin: 5rem 0;
     float: right;
     background-color: #1abc9c;
     border: none;
